--- a/packages/Game-EvonyTKR/share/skillBooks/Blessing of Siren.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Blessing of Siren.yaml
@@ -4,35 +4,35 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 25
       unit: percentage
   - attribute: Attack
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 15
       unit: percentage
   - attribute: Attack
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
   - attribute: Defense
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 15
       unit: percentage
   - attribute: Defense
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
