--- a/packages/Game-EvonyTKR/share/skillBooks/Bloody Leader.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Bloody Leader.yaml
@@ -10,7 +10,7 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 15
       unit: percentage
