--- a/packages/Game-EvonyTKR/share/skillBooks/Dear Child of Victory.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Dear Child of Victory.yaml
@@ -2,7 +2,7 @@
 name: Dear Child of Victory
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 45
       unit: percentage
