--- a/packages/Game-EvonyTKR/share/skillBooks/Gothic Sword.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Gothic Sword.yaml
@@ -2,28 +2,28 @@
 name: Gothic Sword
 buff:
   - attribute: Attack
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 45
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 45
       unit: percentage
   - attribute: HP
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 30
       unit: percentage
   - attribute: HP
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
