--- a/packages/Game-EvonyTKR/share/skillBooks/Great Captainess.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Great Captainess.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 35
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 35
       unit: percentage
