--- a/packages/Game-EvonyTKR/share/skillBooks/Great Northern War.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Great Northern War.yaml
@@ -4,7 +4,7 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 40
       unit: percentage
@@ -17,14 +17,14 @@ buff:
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 10
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
