--- a/packages/Game-EvonyTKR/share/skillBooks/Guard of Owl and Serpent.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Guard of Owl and Serpent.yaml
@@ -4,42 +4,42 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 35
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 35
       unit: percentage
   - attribute: Attack
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
   - attribute: HP
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
   - attribute: Attack
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 10
       unit: percentage
   - attribute: HP
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 10
       unit: percentage
