--- a/packages/Game-EvonyTKR/share/skillBooks/Gwanggaeto-taewang.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Gwanggaeto-taewang.yaml
@@ -2,12 +2,12 @@
 name: Gwanggaeto-taewang
 buff:
   - attribute: Attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 20
       unit: percentage
   - attribute: Attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 20
       unit: percentage
