--- a/packages/Game-EvonyTKR/share/skillBooks/Holy War of Yadirah.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Holy War of Yadirah.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 40
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 40
       unit: percentage
