--- a/packages/Game-EvonyTKR/share/skillBooks/Khmer King.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Khmer King.yaml
@@ -4,35 +4,35 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 45
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 25
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 25
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 25
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 25
       unit: percentage
