--- a/packages/Game-EvonyTKR/share/skillBooks/Lady of the Mercians.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Lady of the Mercians.yaml
@@ -3,7 +3,7 @@ buff:
   - attribute: Attack
     condition:
       - Against Monsters
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 55
       unit: percentage
