--- a/packages/Game-EvonyTKR/share/skillBooks/Odyssey - Raimondo.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Odyssey - Raimondo.yaml
@@ -2,26 +2,26 @@
 name: Odyssey - Raimondo
 buff:
   - attribute: Defense
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
   - attribute: Defense
-    class: Siege
+    class: Siege Machines
     value:
       number: 10
       unit: percentage
   - attribute: HP
     condition:
       - Enemy
-    class: Archers
+    class: Ranged Troops
     value:
       number: 20
       unit: percentage
   - attribute: HP
     condition:
       - Enemy
-    class: Siege
+    class: Siege Machines
     value:
       number: 20
       unit: percentage
