--- a/packages/Game-EvonyTKR/share/skillBooks/Restorer of the World.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Restorer of the World.yaml
@@ -3,21 +3,21 @@ name: Restorer of the World
 buff:
   - condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     attribute: Attack
     value:
       number: 40
       unit: percentage
   - condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     attribute: HP
     value:
       number: 35
       unit: percentage
   - condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     attribute: HP
     value:
       number: 35
