--- a/packages/Game-EvonyTKR/share/skillBooks/Saint of War.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Saint of War.yaml
@@ -4,21 +4,21 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 30
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 20
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 20
       unit: percentage
