--- a/packages/Game-EvonyTKR/share/skillBooks/Shield of Parthians.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Shield of Parthians.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 25
       unit: percentage
   - attribute: Attack
     condition:
       - dragon_to_the_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
