--- a/packages/Game-EvonyTKR/share/skillBooks/Yari no Mataza.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Yari no Mataza.yaml
@@ -2,21 +2,21 @@
 name: Yari no Mataza
 buff:
   - attribute: Attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 35
       unit: percentage
     condition:
       - leading_the_army_to_attack
   - attribute: HP
-    class: Ground
+    class: Ground Troops
     value:
       number: 30
       unit: percentage
     condition:
       - leading_the_army_to_attack
   - attribute: HP
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 30
       unit: percentage
