--- a/packages/Game-EvonyTKR/share/skillBooks/Battle of Xiaoting.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Battle of Xiaoting.yaml
@@ -2,21 +2,21 @@
 name: Battle of Xiaoting
 buff:
   - attribute: Attack
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 45
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 30
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
