--- a/packages/Game-EvonyTKR/share/skillBooks/Battle of Zenta.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Battle of Zenta.yaml
@@ -2,17 +2,17 @@
 name: Battle of Zenta
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 35
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 10
       unit: percentage
   - attribute: HP
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 10
       unit: percentage
