--- a/packages/Game-EvonyTKR/share/skillBooks/General of the Armies.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/General of the Armies.yaml
@@ -2,12 +2,12 @@
 name: General of the Armies
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 40
       unit: percentage
   - attribute: HP
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 40
       unit: percentage
