--- a/packages/Game-EvonyTKR/share/skillBooks/Glory Knight.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Glory Knight.yaml
@@ -2,21 +2,21 @@
 name: Glory Knight
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 30
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 15
       unit: percentage
   - attribute: HP
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
