--- a/packages/Game-EvonyTKR/share/skillBooks/Golden Apple.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Golden Apple.yaml
@@ -4,33 +4,33 @@ buff:
   - attribute: Defense
     condition:
       - When_Defending_Outside_The_Main_City
-    class: Archers
+    class: Ranged Troops
     value:
       number: 35
       unit: percentage
   - attribute: Defense
     condition:
       - When_Defending_Outside_The_Main_City
-    class: Siege
+    class: Siege Machines
     value:
       number: 35
       unit: percentage
   - attribute: Defense
     condition:
       - When_Defending_Outside_The_Main_City
-    class: Siege
+    class: Siege Machines
     value:
       number: 35
       unit: percentage
   - attribute: HP
     condition:
       - When_Defending_Outside_The_Main_City
-    class: Siege
+    class: Siege Machines
     value:
       number: 35
       unit: percentage
   - attribute: Attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 45
       unit: percentage
