--- a/packages/Game-EvonyTKR/share/skillBooks/Governor of Transalpine Gaul.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Governor of Transalpine Gaul.yaml
@@ -4,35 +4,35 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 40
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 30
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 30
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 30
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 30
       unit: percentage
