--- a/packages/Game-EvonyTKR/share/skillBooks/Great King.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Great King.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 30
       unit: percentage
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 20
       unit: percentage
