--- a/packages/Game-EvonyTKR/share/skillBooks/Hero of Don River.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Hero of Don River.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: HP
     condition:
       - Reinforcing
-    class: Ground
+    class: Ground Troops
     value:
       number: 20
       unit: percentage
   - attribute: Attack
     condition:
       - Reinforcing
-    class: Archers
+    class: Ranged Troops
     value:
       number: 30
       unit: percentage
