--- a/packages/Game-EvonyTKR/share/skillBooks/Heroine of the Yang Family.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Heroine of the Yang Family.yaml
@@ -2,17 +2,17 @@
 name: Heroine of the Yang Family
 buff:
   - attribute: Attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 45
       unit: percentage
   - attribute: Defense
-    class: Siege
+    class: Siege Machines
     value:
       number: 20
       unit: percentage
   - attribute: HP
-    class: Siege
+    class: Siege Machines
     value:
       number: 20
       unit: percentage
