--- a/packages/Game-EvonyTKR/share/skillBooks/Indefectible Emperor.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Indefectible Emperor.yaml
@@ -2,12 +2,12 @@
 name: Indefectible Emperor
 buff:
   - attribute: Attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 15
       unit: percentage
   - attribute: Attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
