--- a/packages/Game-EvonyTKR/share/skillBooks/Invincible Pharaoh.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Invincible Pharaoh.yaml
@@ -4,14 +4,14 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 30
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 25
       unit: percentage
