--- a/packages/Game-EvonyTKR/share/skillBooks/Ironhanded Leader.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Ironhanded Leader.yaml
@@ -4,28 +4,28 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 30
       unit: percentage
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 30
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 15
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 15
       unit: percentage
