--- a/packages/Game-EvonyTKR/share/skillBooks/King of Jerusalem.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/King of Jerusalem.yaml
@@ -2,22 +2,22 @@
 name: King of Jerusalem
 buff:
   - attribute: Attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 40
       unit: percentage
   - attribute: HP
-    class: Archers
+    class: Ranged Troops
     value:
       number: 40
       unit: percentage
   - attribute: Defense
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
   - attribute: Defense
-    class: Siege
+    class: Siege Machines
     value:
       number: 10
       unit: percentage
