--- a/packages/Game-EvonyTKR/share/skillBooks/Knight of Treachery.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Knight of Treachery.yaml
@@ -2,21 +2,21 @@
 name: Knight of Treachery
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 40
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 30
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
