--- a/packages/Game-EvonyTKR/share/skillBooks/Napoleonic Wars.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Napoleonic Wars.yaml
@@ -4,21 +4,21 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 50
       unit: percentage
   - attribute: Defense
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 30
       unit: percentage
   - attribute: HP
     condition:
       - brings_dragon_or_beast_to_attack
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 30
       unit: percentage
