--- a/packages/Game-EvonyTKR/share/skillBooks/Odyssey - Douglas.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Odyssey - Douglas.yaml
@@ -4,21 +4,21 @@ buff:
   - attribute: Attack
     condition:
       - Marching
-    class: Archers
+    class: Ranged Troops
     value:
       number: 10
       unit: percentage
   - attribute: Defense
     condition:
       - Enemy
-    class: Ground
+    class: Ground Troops
     value:
       number: 20
       unit: percentage
   - attribute: Defense
     condition:
       - Enemy
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 20
       unit: percentage
