--- a/packages/Game-EvonyTKR/share/skillBooks/Praetorian Guard.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Praetorian Guard.yaml
@@ -2,17 +2,17 @@
 name: Praetorian Guard
 buff:
   - attribute: Attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 15
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     value:
       number: 15
       unit: percentage
   - attribute: HP
-    class: Ground
+    class: Ground Troops
     value:
       number: 20
       unit: percentage
