--- a/packages/Game-EvonyTKR/share/skillBooks/Regent Governor.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Regent Governor.yaml
@@ -4,28 +4,28 @@ buff:
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 4
       unit: percentage
   - attribute: Attack
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 45
       unit: percentage
   - attribute: Defense
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
   - attribute: HP
     condition:
       - leading_the_army_to_attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 15
       unit: percentage
