--- a/packages/Game-EvonyTKR/share/skillBooks/Saint Louis.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Saint Louis.yaml
@@ -2,12 +2,12 @@
 name: Saint Louis
 buff:
   - attribute: Attack
-    class: Archers
+    class: Ranged Troops
     value:
       number: 40
       unit: percentage
   - attribute: Defense
-    class: Archers
+    class: Ranged Troops
     value:
       number: 45
       unit: percentage
