--- a/packages/Game-EvonyTKR/share/skillBooks/Supreme Power.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Supreme Power.yaml
@@ -2,21 +2,21 @@
 name: Supreme Power
 buff:
   - attribute: Attack
-    class: Siege
+    class: Siege Machines
     condition:
       - leading_the_army_to_attack
     value:
       number: 40
       unit: percentage
   - attribute: HP
-    class: Archers
+    class: Ranged Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 35
       unit: percentage
   - attribute: HP
-    class: Siege
+    class: Siege Machines
     condition:
       - leading_the_army_to_attack
     value:
