--- a/packages/Game-EvonyTKR/share/skillBooks/The Eagle of Brittany.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/The Eagle of Brittany.yaml
@@ -2,21 +2,21 @@
 name: The Eagle of Brittany
 buff:
   - attribute: Attack
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 35
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     condition:
       - leading_the_army_to_attack
     value:
       number: 20
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     condition:
       - leading_the_army_to_attack
     value:
