--- a/packages/Game-EvonyTKR/share/skillBooks/The Military Art.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/The Military Art.yaml
@@ -2,17 +2,17 @@
 name: The Military Art
 buff:
   - attribute: Attack
-    class: Siege
+    class: Siege Machines
     value:
       number: 45
       unit: percentage
   - attribute: Defense
-    class: Siege
+    class: Siege Machines
     value:
       number: 25
       unit: percentage
   - attribute: Defense
-    class: Archers
+    class: Ranged Troops
     value:
       number: 25
       unit: percentage
