--- a/packages/Game-EvonyTKR/share/skillBooks/Viking King.yaml
+++ b/packages/Game-EvonyTKR/share/skillBooks/Viking King.yaml
@@ -2,22 +2,22 @@
 name: Viking King
 buff:
   - attribute: Attack
-    class: Ground
+    class: Ground Troops
     value:
       number: 40
       unit: percentage
   - attribute: HP
-    class: Ground
+    class: Ground Troops
     value:
       number: 40
       unit: percentage
   - attribute: Defense
-    class: Ground
+    class: Ground Troops
     value:
       number: 10
       unit: percentage
   - attribute: Defense
-    class: Mounted
+    class: Mounted Troops
     value:
       number: 10
       unit: percentage
