fix: Update Theodosius I.yaml
spelling correction

Signed-off-by: Luke Schierer <2224044+lschierer@users.noreply.github.com>

--- a/packages/Game-EvonyTKR/share/ascending/Theodosius I.yaml
+++ b/packages/Game-EvonyTKR/share/ascending/Theodosius I.yaml
@@ -63,7 +63,7 @@ ascending:
         number: 20
         unit: percentage
     - attribute: Defense
-      class: Seige
+      class: Siege
       condition:
         - Marching
       value:
